--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@plugin "daisyui" {
+  themes: night;
+}
 
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
