--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,12 +1,4 @@
-@import "tailwindcss" source(none);
-
-@source "**/*.mjs";
-@source "**/*.tsx";
-
-@layer theme, base, components, utilities;
-@import "tailwindcss/theme.css" layer(theme);
-@import "tailwindcss/preflight.css" layer(base);
-@import "tailwindcss/utilities.css" layer(utilities);
+@import "tailwindcss";
 
 @plugin "daisyui" {
   themes: night;
