style: update layout container

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,6 +1,9 @@
-@import "tailwindcss";
+@import "tailwindcss" source(none);
+@source "../components/*.res";
+@source "../routes/*.res";
 
 @plugin "@tailwindcss/typography";
+
 @plugin "daisyui" {
   themes: night;
 }
