--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,4 +1,4 @@
-@import "tailwindcss" source(none);
+/* @import "tailwindcss" source(none);
 @source "../components/*.res";
 @source "../routes/*.res";
 
@@ -8,4 +8,4 @@
 
 @plugin "daisyui" {
   themes: business;
-}
+} */
