--- a/static/styles.css
+++ b/static/styles.css
@@ -154,11 +154,23 @@ section {
 
 .movie-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 200px));
+  grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   margin-top: 1rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-width: 768px) {
+  .movie-grid {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .movie-grid {
+    grid-template-columns: repeat(12, 1fr);
+  }
 }
 
 .movie-card {
@@ -196,7 +208,7 @@ section {
   img {
     float: right;
     margin-left: 1rem;
-    max-width: 300px;
+    max-width: 30vw;
     border-radius: 0.5rem;
   }
   form {
