--- a/static/styles.css
+++ b/static/styles.css
@@ -242,7 +242,7 @@ section {
     margin-top: 8px;
     font-size: 1rem;
     border: none;
-    width: 600px;
+    max-width: 600px;
     border-top-left-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
     &:focus {
