--- a/static/styles.css
+++ b/static/styles.css
@@ -88,6 +88,7 @@ h2 {
 }
 
 navigation {
+  position: relative;
   align-items: center;
   color: var(--white);
   display: flex;
@@ -118,22 +119,22 @@ navigation {
       color: var(--light);
     }
   }
-}
-
-.popover {
-  position: relative;
-  nav {
-    inset: unset;
-    background: var(--light-accent);
-    padding: 1rem;
-    border-radius: 0.5rem;
-    ul {
-      list-style: none;
-      display: flex;
-      flex-direction: column;
-      gap: 0.75rem;
-      a {
-        font-size: 1.25rem;
+  details {
+    nav {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background: var(--light-accent);
+      padding: 1rem;
+      border-radius: 0.5rem;
+      ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 0.75rem;
+        a {
+          font-size: 1.25rem;
+        }
       }
     }
   }
@@ -341,4 +342,11 @@ section {
   background: var(--light-accent);
   padding: 1rem;
   border-radius: 0.5rem;
+}
+
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
 }
