--- a/static/styles.css
+++ b/static/styles.css
@@ -97,10 +97,13 @@ navigation {
   margin: auto;
   width: 100%;
   max-width: 900px;
-  a, a:visited {
+
+  a,
+  a:visited {
     color: var(--white);
     text-decoration: none;
   }
+
   button {
     background: transparent;
     border: none;
@@ -109,16 +112,22 @@ navigation {
     cursor: pointer;
     color: var(--white);
   }
+
   svg {
     width: 2rem;
     height: 2rem;
   }
-  button, svg, a {
+
+  button,
+  svg,
+  a {
     transition: 0.3s;
+
     &:hover {
       color: var(--light);
     }
   }
+
   details {
     nav {
       position: absolute;
@@ -127,11 +136,13 @@ navigation {
       background: var(--light-accent);
       padding: 1rem;
       border-radius: 0.5rem;
+
       ul {
         list-style: none;
         display: flex;
         flex-direction: column;
         gap: 0.75rem;
+
         a {
           font-size: 1.25rem;
         }
@@ -183,15 +194,18 @@ section {
   display: flex;
 
   img {
-    background: var(--dark);
+    background: var(--light);
     width: 100%;
     border-radius: 0.5rem;
-    color: var(--white);
+    color: var(--dark);
     justify-content: center;
     align-items: center;
     text-align: center;
     display: flex;
+    line-height: 1.5;
+    font-size: 1rem;
   }
+
   svg {
     position: absolute;
     bottom: 0.5rem;
@@ -209,23 +223,28 @@ section {
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
+
   h2 {
     font-size: 2rem;
     margin-bottom: 2rem;
   }
+
   p {
     text-wrap: balance;
     line-height: 1.5;
   }
+
   img {
     float: right;
     margin-left: 1rem;
     max-width: 30vw;
     border-radius: 0.5rem;
   }
+
   form {
     margin: 2rem auto;
     width: auto;
+
     button {
       cursor: pointer;
       background: var(--light);
@@ -234,6 +253,7 @@ section {
       border-radius: 0.5rem;
       border-width: 0;
       transition: 0.3s;
+
       &:hover {
         background: var(--light-accent);
       }
@@ -243,12 +263,14 @@ section {
 
 .search {
   text-align: center;
+
   form {
     display: flex;
     width: fit-content;
     margin: auto;
     margin-bottom: 2rem;
   }
+
   input {
     padding: 6px;
     margin-top: 8px;
@@ -257,10 +279,12 @@ section {
     max-width: 600px;
     border-top-left-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
+
     &:focus {
       border: none;
     }
   }
+
   button {
     float: right;
     padding: 6px 10px;
@@ -274,9 +298,11 @@ section {
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
     transition: 0.3s;
+
     &:hover {
       background: var(--light-accent);
     }
+
     svg {
       width: 25px;
       color: var(--dark);
@@ -295,6 +321,7 @@ section {
   background: var(--light);
   padding: 2rem;
   border-radius: 0.5rem;
+
   button {
     background: var(--dark-accent);
     border: none;
@@ -305,10 +332,12 @@ section {
     color: var(--white);
     font-size: 1rem;
     transition: 0.3s;
+
     &:hover {
       background: var(--dark);
     }
   }
+
   label {
     font-size: 1rem;
     color: var(--dark);
@@ -316,21 +345,26 @@ section {
     display: block;
     font-family: sans-serif;
   }
+
   legend {
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 1rem;
   }
+
   fieldset {
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
     margin-bottom: 1rem;
+
     input {
       margin-left: 0.5rem;
     }
   }
-  input, select {
+
+  input,
+  select {
     font-size: 1rem;
     color: var(--dark);
   }
@@ -338,11 +372,15 @@ section {
 
 .no-movies {
   max-width: fit-content;
+
   h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
-  p, a, a:active {
+
+  p,
+  a,
+  a:active {
     color: var(--white);
     text-decoration: none;
     font-size: 1rem;
@@ -356,9 +394,10 @@ section {
   border-radius: 0.5rem;
 }
 
-details > summary {
+details>summary {
   list-style: none;
 }
-details > summary::-webkit-details-marker {
+
+details>summary::-webkit-details-marker {
   display: none;
 }
